--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Programowanie reaktywne</title>
+    <title>Chirper</title>
 </head>
 <body>
-<p>Programowanie reaktywne</p>
+<p>Chirper</p>
 </body>
 </html>
